--- a/templates/home.html
+++ b/templates/home.html
@@ -1,17 +1,23 @@
-<h3>HELLO WORLD</h3>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kobotoolbox Api</title>
+</head>
+<body>
+
+   <h3>HOW TO FETCH KOBOTOOLBOX API USING DJANGO</h3>
 
 
 
 
-{% for i in api %}
-
-{{i.Name}}
-
-{% endfor %}
+   <h1>{{api.deployment__submission_count}}</h1>
 
 
 
 
-
-
-
+    
+</body>
+</html>
