--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,20 @@
 
 
 
+   <h1>{{api.name}}</h1>
    <h1>{{api.deployment__submission_count}}</h1>
+   <h1>{{api.results.1.Name}}</h1>
+
+   {% for x in api %}
+
+   <h1>{{x.Name}}</h1>
+
+   {% endfor %}
+
+
+
+
+   
 
 
 
