--- a/templates/home.html
+++ b/templates/home.html
@@ -29,6 +29,12 @@
 
    {% endfor %}
 
+   <form method="POST">
+    {% csrf_token %}
+    {{form}}
+    <button type="submit"> submit </button>
+    </form>
+
 
 
 
