--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,7 @@
    <form method="POST">
     {% csrf_token %}
     <div>
-        {{form}}
+        {{form.as_p}}
     </div>
     <div>
         <button type="submit"> submit </button>
